修改为每5s读取一次温湿度
Signed-off-by: xhcgit <xhc19950616@126.com>

--- a/Qt/dht11Gui/MainWindow.ui
+++ b/Qt/dht11Gui/MainWindow.ui
@@ -169,7 +169,7 @@
   </action>
   <action name="actionBeepFreq">
    <property name="text">
-    <string>BeepFreq</string>
+    <string>Beep</string>
    </property>
   </action>
   <action name="actionAverage">
